# actions.json

./: .gitignore  .gitmodules  AGENTS.md  CONCEPTS.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: docs-validation.yml  release-extension.yml
adapters/claude-code-plugin/: README.md
adapters/codex/: README.md
adapters/npm-bridge/: README.md  package.json
adapters/openclaw/: README.md
adapters/pi-package/: README.md
docs/: _config.yml  a11y-shim-spec.md  actions-bridge-protocol.md  actions-json-format.md  actions-json-production-pipeline.md  actions-json-storage.md  agent-event-await.md  bridge-architecture.md  chrome-extension.md  development-cycle.md  expenditure-tracking.md  getting-started.md  hosted-agent-chat-ui.md  hosted-agent-tools.md  hosted-agent.md  index.md  overlay-template-data.md  primitive-dictionary-architecture.md  repo-structure.md  schema-v1-proposal.md  storage-visibility-scopes.md  troubleshooting.md
docs/brainstorms/: 2026-07-10-codex-same-session-heartbeat.md
docs/decks/: schema-v1-proposal-deck.html
docs/release-notes/: 0.1.102.md  0.1.103.md  0.1.117.md  0.1.118.md  0.1.119.md  0.1.148.md  0.1.74.md  0.1.75.md  0.1.76.md  0.1.77.md  0.1.78.md  0.1.79.md  0.1.80.md  0.1.81.md  0.1.82.md  0.1.84.md  0.1.85.md  index.md
docs/reliability/: instrument-bounds.md
examples/simple-form/: actions.json  index.html
examples/storage-scaffold/: README.md  storage.json
extensions/chrome-overlay-runtime/: README.md  esbuild.a11y.mjs  manifest.json  offscreen.html  popup.html  sidepanel.html
investigations/: getting-started-pages-404.md  release-archive-verification-instructions-mismatch-2026-07-12.md
mcp/: Cargo.toml
mcp/actions-json-mcp/: Cargo.toml  README.md
mcp/actions-json-mcp/src/: chrome_launcher_tools.rs  lib.rs  main.rs
mcp/actions-json-mcp/tests/: pr3_overlay_characterization.rs
mcp/actions-json-mcp/tests/fixtures/: linear-step-fixture.html
mcp/actions-json-mcp/tests/fixtures/actions-json-storage/scopes/private/sites/amazon.com/prime-video/: actions.json
mcp/actions-json-mcp/tests/fixtures/actions-json-storage/scopes/private/sites/amazon.com/prime-video/items/: continue-watching.items.json
mcp/actions-json-mcp/tests/fixtures/actions-json-storage/scopes/private/sites/linear.app/workspace/: actions.json
mcp/chrome-launcher/: Cargo.toml
mcp/chrome-launcher-helper/: BUILD.md  Cargo.toml
mcp/chrome-launcher-helper/src/: frame.rs  identity.rs  main.rs
mcp/chrome-launcher/src/: backend.rs  claim.rs  lib.rs  session.rs  wsl_windows.rs
runtime/actions-json-runtime/: README.md
scripts/: check-bounded-lifecycle-waits.mjs  init-storage.sh  package-extension.sh  package-mcp-bridge.sh  release-binaries.sh  validate-skills.mjs  verify-actions-json-launcher-config.mjs
scripts/lib/: gitlinks.mjs
skills/: SKILL.md
skills/agents/: openai.yaml
tests/: background-screenshot.test.mjs  package-extension.test.mjs
(+310 files in other folders)
