[package]
name = "actions-json-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
uuid = { version = "1.10", features = ["v4"] }

[dev-dependencies]
tempfile = "3.24"
tower = { version = "0.5", features = ["util"] }
