[package]
name = "chrome-launcher"
version = "0.1.0"
edition = "2021"
description = "Cross-platform library to launch and drive a real Chrome (open, self-install our extension, take control of a tab) for the actions.json MCP. WSL->Windows backend implemented; macOS/Linux are documented seams."
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1.0"
tokio-tungstenite = "0.24"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.24"
